fix: 🐛 prevent layout shift when scrollbar appears

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,7 @@ html {
       density: 0
     )
   );
+  scrollbar-gutter: stable;
 }
 
 body {
@@ -40,6 +41,7 @@ html,
 body {
   height: 100%;
 }
+
 body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
